assets/css/style.css
.sss-form-img{
  content: url("../../assets/app/img/Contributions_Payment_Form-4.png");
  background-repeat: no-repeat;
  min-width: 815px;
  max-height: 750px;
  padding: 0px;
  margin: 0px;
}
.sss-form{
  padding: 0;
}
.main-content{
    padding: 0px!important;
}
.login-body{
	background-image: url('../../assets/img/background2.jpg');
	background-attachment: fixed;
	background-size: cover;
	background-repeat: no-repeat;
}
#logo-image{
	width: 394px;
    height: 80px;
}
.login-form{
	width: 420px;
    text-align: center;
    color: white;
    margin-top: 20px;
    float: right;
    margin-right: 148px;
    padding: 20px;
}

#username, #password{
	border: 0;
    background-color: transparent;
    box-shadow: none;
    color: white!important;
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    font-weight: 500;
    height: 36px;
    border-radius: 0;
}

.input-group-addon{
	font-size: 24px;
    color: #ffffff;
}

.input-group{
	border-bottom: 2px solid #4a4949;
    padding: 10px 0;
}

#register-anchor{
	color: #ffffff;
}

a:hover{
	text-decoration: none;
    outline: none;
    color: #89fae9;
}

.form-control:focus{
    border-color: #96CA2D!important;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(150, 202, 45, 0.6)!important;
}

.btn-success{
    background-color: #8EC63F;
    border-color: #8EC63F;
}

.sss-panel, .pagibig-panel{
    min-height: 405px!important;
}

.form-pagibig{
    display: block;
    background-image: url("../../assets/app/img/FPF060_Member'sContributionRemittance_V01-3.png");
    background-repeat: no-repeat;
    min-height: 1184px;
    width: 900px;
    margin: 0 auto;
    background-size: contain;

}


.button-print{
    display: block;
}


/*display of pagibig form*/ 
.print-form-pagibig{
    display: none;
}

#pagePagibigContri .employerId{
    border: 1px solid red;
    background-color: transparent;
    text-align: center;
    margin-top: 89px;
    margin-left: 612px;
    width: 270px;
    height: 39px;
}


#pagePagibigContri .businessName{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 44px;
    margin-left: 39px;
    height: 28px;
    width: 569px;
}

#pagePagibigContri .branch{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 44px;
    margin-left: 18px;
    height: 29px;
    width: 250px;

}

#pagePagibigContri .roomNo{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 25px;
    margin-left: 34px;
    height: 26px;
    width: 155px;
    position: absolute;
}

#pagePagibigContri .buildingName{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 25px;
    margin-left: 198px;
    height: 26px;
    width: 194px;
    text-align: center;
    position: absolute;
}

#pagePagibigContri .blockNo{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 25px;
    margin-left: 410px;
    height: 26px;
    width: 196px;
    position: absolute;
}

#pagePagibigContri .privateCompany{
    border: 1px solid red;
    background-color: transparent;
    position: absolute;
    margin-top: 21.4px;
    margin-left: 634px;
    width: 8px;
    height: 8px;
}

#pagePagibigContri .government{
    border: 1px solid red;
    background-color: transparent;
    position: absolute;
    margin-top: 34px;
    height: 8px;
    margin-left: 634px;
    width: 8px;
}

#pagePagibigContri .household{
    border: 1px solid red;
    background-color: transparent;
    position: absolute;
    width: 8px;
    height: 8px;
    margin-left: 739px;
    margin-top: 21.6px;
}

#pagePagibigContri .streetName{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 45px;
    margin-left: 30px;
    height: 28px;
    width: 112px;
    font-size: 10px;
}

#pagePagibigContri  .subdivision{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 45px;
    margin-left: 10px;
    height: 28px;
    width: 106px;
    font-size: 10px;
}

#pagePagibigContri .barangay{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 45px;
    margin-left: 10px;
    height: 28px;
    width: 118px;
    font-size: 10px;
}

#pagePagibigContri .city{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 45px;
    margin-left: 10px;
    height: 28px;
    width: 206px;
    font-size: 10px;
}

#pagePagibigContri .province{
        border: 1px solid red;
    background-color: transparent;
    margin-top: 45px;
    margin-left: 9px;
    height: 28px;
    width: 168px;
    font-size: 10px;

}

#pagePagibigContri .zipCode{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 45px;
    margin-left: 9px;
    height: 28px;
    width: 73px;
    text-align: center;
}

#pagePagibigContri .program1{
    border: 1px solid red;
    background-color: transparent;
    position: absolute;
    width: 8px;
    height: 8px;
    margin-top: 21px;
    margin-left: 26.9px;
}

#pagePagibigContri .program2{
    border: 1px solid red;
    background-color: transparent;
    position: absolute;
    width: 8px;
    height: 8px;
    margin-top: 21px;
    margin-left: 266px;
}

#pagePagibigContri .program3{
    border: 1px solid red;
    background-color: transparent;
    position: absolute;
    width: 8px;
    height: 8px;
    margin-top: 21px;
    margin-left: 401px;
}

#pagePagibigContri .periodCovered{
    border: 1px solid red;
    background-color: transparent;
    margin-left: 631px;
    margin-top: 11px;
    height: 30px;
    width: 246px;
    
}
#pagePagibigContri .midNo1{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 33px;
    margin-left: 18px;
    width: 108px;
    height: 19px;
    text-align: center;
    font-size: 12px;
}

#pagePagibigContri .name1{
    border: 1px solid red;
    background-color: transparent;
    margin-top: 33px;
    height: 19px;
    margin-left: 1px;
    width: 293px;
    font-size: 11px;
}
/* ... */

